compiler/testData/diagnostics/tests/typeParameters/typeParameterChainInReceiver.fir.kt
// ISSUE: KT-56212
fun <F> <!UNRESOLVED_REFERENCE!>F.X<!>.f(): Boolean = false
